@@ -23,6 +23,7 @@ endif::[]
 
 https://github.com/elastic/apm-agent-go/compare/v1.12.0...master[View commits]
 
+- Prefer w3c traceparent header over legacy elastic-apm-traceparent {pull}963[#(963)]
 
 [[release-notes-1.x]]
 === Go Agent version 1.x
